# ParetoBench

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mkdocs.yml  pyproject.toml  single_line_format.md  tests.py
.github/workflows/: docs.yml  python_tests.yml  upload_pypi.yml
dev_notebooks/: cf_pareto_fronts.ipynb  dtlz_pareto_fronts.ipynb  experiment_loading_performance.ipynb  save_new_legacy_file.ipynb  serialization.ipynb  testing_metrics.ipynb  wfg_pareto_fronts.ipynb  zdt3_pareto_front.ipynb  zdt6_pareto_front.ipynb
docs/: container_objects.ipynb  index.md
docs/analysis/: duplicate_detection.ipynb  inverted_generational_distance_analysis.ipynb
docs/data/: CPSMOEA.h5  NSGAII.h5
docs/examples/: container_objects.ipynb  inverted_generational_distance_analysis.ipynb  plotting_histories.ipynb  plotting_metrics.ipynb  plotting_populations.ipynb  problems.ipynb
docs/examples/data/: ParEGO.h5  for_plotting.h5
docs/ext/: pymoo.ipynb  xopt.ipynb
docs/plotting/: plotting_histories.ipynb  plotting_metrics.ipynb  plotting_populations.ipynb
docs/problems/: problems.ipynb  single_line_format.md
example_notebooks/: container_objects.ipynb  duplicate_detection.ipynb  inverse_generational_distance_analysis.ipynb  inverted_generational_distance_analysis.ipynb  plotting.ipynb  plotting_histories.ipynb  plotting_metrics.ipynb  plotting_populations.ipynb  problems.ipynb
example_notebooks/data/: plotting_data.h5
src/paretobench/: __init__.py  analyze_metrics.py  attainment.py  cf.py  container_plotting.py  containers.py  ctp.py  dtlz.py  dtlz_utils.py  exceptions.py  factory.py  metrics.py  misc.py  problem.py  pydantic.py  simple_serialize.py  stats.py  utils.py  wfg.py  wfg_utils.py  zdt.py
src/paretobench/ext/: pymoo.py  xopt.py
src/paretobench/plotting/: __init__.py  attainment.py  container_plotting.py  history.py  metrics.py  population.py  utils.py
tests/: test_analyze_metrics.py  test_containers.py  test_metrics.py  test_plotting.py  test_problems.py  test_serialization.py  test_stats.py  utils.py
tests/ext/: test_pymoo.py  test_xopt.py
tests/legacy_file_formats/: paretobench_file_format_v1.0.0.h5  paretobench_file_format_v1.1.0.h5
