[project]
name = "paretobench"
version = "0.1.0"
authors = [
  { name="Christopher M. Pierce", email="contact@chris-pierce.com" },
]
description="A collection of multiobjective optimization test problems."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
  "numpy",
  "matplotlib",
  "pydantic",
]
