[project]
name = "paretobench"
version = "0.6.0"
authors = [
  { name="Christopher M. Pierce", email="contact@chris-pierce.com" },
]
description="A collection of multiobjective optimization test problems."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
  "h5py",
  "matplotlib",
  "numpy",
  "pandas",
  "pydantic",
]

[project.urls]
Homepage = "https://github.com/electronsandstuff/ParetoBench"
Repository = "https://github.com/electronsandstuff/ParetoBench"

[project.optional-dependencies]
test = [
  "moocore",
  "pymoo",
  "pytest-cov",
  "pytest",
  "scipy",
  "xopt",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
